--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,11 @@
     <artifactId>starter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit-jupiter.version>5.9.2</junit-jupiter.version>
-        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
-        <jaxb-api.version>2.3.1</jaxb-api.version>
-    </properties>
+<properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.release>17</maven.compiler.release>
+</properties>
 
     <dependencies>
         <dependency>
